# Whitepaper

./: .dockerignore  .env.example  .env.production.template  .gitignore  AGENT_INSTRUCTIONS.md  Dockerfile.agent  Dockerfile.ai-service  Dockerfile.backend  Dockerfile.dgraph  Dockerfile.frontend  Dockerfile.kernel  Dockerfile.monolith  Dockerfile.nats  Dockerfile.qdrant  Dockerfile.unified  Dockerfile.workflow  ORACLE_DEPLOYMENT.md  PROJECT_DOCUMENTATION.md  RAILWAY_DEPLOY.md  RAILWAY_DEPLOYMENT.md  README.md  activation_report.txt  ai_log.txt  backend_log.txt  check_activation.py  check_akash_ns.py  check_all.py  check_all_nodes.py  check_gulab.py  check_gulab_details.py  check_india.py  check_namespace.py  check_newuser.py  check_nodes.py  check_ns_simple.py  check_platinum.py  check_scifi.py  check_type.py  check_user_data.py  check_whiskers.py  (+77 more)
.railway/: config.json
ai/: Dockerfile  curation_slm.py  document_ingester.py  embedding_service.py  extraction_slm.py  file_validator.py  llm_router.py  main.py  memchunker.py  requirements.txt  synthesis_slm.py  test_memchunker.py  test_router_debug.py
backend/: railway.toml
deployments/: nginx.conf
docs/: ADMIN_PANEL_DOCUMENTATION.md  BUSINESS_ANALYSIS.md  BUSINESS_FEATURES_IMPLEMENTATION.md  PLATFORM_DOCUMENTATION.md  PLATFORM_PANELS.md  PRD.html  PRODUCT_FEATURES.md  PROJECT_ARCHITECTURE_DEEP_DIVE.md  README.md  SYSTEM_ARCHITECTURE.md  WORKSPACE_COLLABORATION.md  ai-services.md  api-reference.md  architecture.md  (+10 more)
sdk/python/: pyproject.toml
sdk/python/examples/: basic.py
sdk/python/rmk/: __init__.py  client.py
(+205 files in other folders)
